--- a/php_database_etudiants/style.css
+++ b/php_database_etudiants/style.css
@@ -20,7 +20,7 @@ body {
     display: grid;
     height: 70px;
     padding-bottom: 100px;
-    grid-template-columns: 1fr auto auto auto auto;
+    grid-template-columns: 1fr auto auto auto auto auto;
     grid-gap: 10px 35px;
     align-items:center;
     justify-items: left;
@@ -256,11 +256,10 @@ form > input[type=file] {
 
 }
 
-
 .formulaire_contact input {
     padding-left: 2px;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
+    padding-top: 20px;
+    margin-top: 20px;
     border-radius: 0;
     background-color: white;
     border-bottom: #5784BA 2px solid;
@@ -279,6 +278,7 @@ form > input[type=file] {
     color: #9AC8EB;
 }
 .formulaire_contact textarea[class=message] {
+    margin-top: 15px;
     height: 100px;
     width: 100%;
     border: none;
@@ -289,4 +289,14 @@ form > input[type=file] {
 
 .JourDAujourdHui p {
     color: green;
+}
+
+/* Style de la page listes des Contacts */
+.demande_contacts {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 10px;
+    justify-content: center;
+    width: 80%;
+    margin: 0 auto;
 }
